--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
   </div>
 
   <script src="./javascript/main.js"></script>
+  <script src="./javascript/game.js"></script>
+  <script src="./javascript/pollo.js"></script>
+  <script src="./javascript/tubo.js"></script>
 
 </body>
 </html>
